# Self_LLM_SOC

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  scratch_test.py  temp_eval.py  temp_eval2.py  temp_eval3.py  toggle_demo_servers.cmd  toggle_product_server.cmd
Knowledge/: AISecApp Proposal.pptx  DYNAMIC_CVE_SCENARIO_DESIGN.md  DYNAMIC_CVE_SCENARIO_KO.md  GPU_TRAINING_HANDOFF.md  IMPLEMENTATION_SPEC.md  PRODUCTIZATION_ROADMAP.md  PROJECT_STRUCTURE.md  PROMPT_ENGINEERING_AND_SIMULATION_GUIDE.md  Project_Proposal_v4.md
config/: assets.example.yaml  cve_feed.example.yaml  organization.example.yaml  policy.example.yaml  settings.clinic_scenario.yaml  settings.clinic_scenario_xgb.yaml  settings.example.yaml  settings.regional_care_dynamic_cve_xgb.yaml  threat_feed.example.yaml
data/sample/: clinic_telehealth_flows.csv  clinic_telehealth_flows_xgb.csv  clinic_telehealth_flows_xgb_manifest.json  flows.csv  real_llm_test.csv  regional_care_dynamic_cve_flows_xgb.csv  regional_care_dynamic_cve_flows_xgb_manifest.json  xgb_route_sample.csv
prompts/: CHANGELOG.md  tier1_system.md  tier2_system.md
scripts/: daily_summary.py  demo_flow_injector.py  demo_gui_server.py  evaluate_clinic_memory_cycle.py  evaluate_dynamic_cve_memory_cycle.py  generate_clinic_telehealth_flows.py  generate_clinic_telehealth_xgb_flows.py  generate_regional_care_dynamic_cve_xgb_flows.py  ml_train.py  ml_train_multiclass.py  pipeline_run.py  product_api.py  tier2_batch.py
src/soc/: __init__.py  io.py  (+1 more)
(+6205 files in other folders)
